--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: "Hu's Technical Notebook"
+title: "Hu's Notebook"
 email: samyhhu@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-    "This notebook is intended to capture Hu's weird thoughts in the technical dimension."
+    "This notebook is intended to document Hu's insights as he learns about technical subjects."
 baseurl: "" 
 url: "samyhhu.github.io" # "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: 
