--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: "Hu's Notebook"
+title: "Hu's Tech Blog"
 email: samyhhu@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-    "This notebook is intended to document Hu's insights as he learns about technical subjects."
-baseurl: "" 
+    "Notes"
+baseurl: ""
 url: "samyhhu.github.io" # "http://yourdomain.com" # the base hostname & protocol for your site
-twitter_username: 
-github_username: samyhhu 
+twitter_username:
+github_username: samyhhu
 
 # Build settings
 markdown: kramdown
