--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Hu's Tech Blog"
+title: "Hu's Blog"
 email: samyhhu@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
     "Notes"
